@@ -1,0 +1,7 @@
+package com.codeborne.selenide.ex;
+
+public class SoftAssertionError extends AssertionError {
+  public SoftAssertionError(String message) {
+    super(message);
+  }
+}
