@@ -1,5 +1,7 @@
 package com.codeborne.selenide.logevents;
 
+import com.codeborne.selenide.ex.SoftAssertionError;
+
 import java.util.ArrayList;
 import java.util.List;
 
@@ -25,7 +27,7 @@ public class ErrorsCollector implements LogEventListener {
 
   public void failIfErrors(String testName) {
     if (errors.size() == 1) {
-      throw new AssertionError(errors.get(0).toString());
+      throw new SoftAssertionError(errors.get(0).toString());
     }
     if (!errors.isEmpty()) {
       StringBuilder sb = new StringBuilder();
@@ -37,7 +39,7 @@ public class ErrorsCollector implements LogEventListener {
         sb.append("\nFAIL #").append(++i).append(": ");
         sb.append(error).append('\n');
       }
-      throw new AssertionError(sb.toString());
+      throw new SoftAssertionError(sb.toString());
     }
   }
 
