@@ -1,7 +1,6 @@
 package integration.testng;
 
 import integration.LocalHttpServer;
-import org.testng.annotations.BeforeClass;
 
 import java.util.logging.Logger;
 
@@ -13,14 +12,13 @@ import static org.openqa.selenium.net.PortProber.findFreePort;
 abstract class BaseTestNGTest {
   private static final Logger log = Logger.getLogger(BaseTestNGTest.class.getName());
   private static LocalHttpServer server;
-
-  @BeforeClass
-  public void setUp() throws Exception {
+  
+  protected void startServer() throws Exception {
     if (server == null) {
       int port = findFreePort();
-      server = new LocalHttpServer(port).start();
-      log.info("START " + browser + " TESTS");
+      log.info("START " + browser + " Test NG tests");
       baseUrl = "https://127.0.0.1:" + port;
+      server = new LocalHttpServer(port).start();
     }
 
     open("/start_page.html");
